--- a/index.html
+++ b/index.html
@@ -1,6 +1,140 @@
 <head>
-  
+    <meta charset="utf-8">
+    <title>AI4DailyTasks</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="shortcut icon" href="favicon.png">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
+
+    <link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Quicksand">
+
+    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/ai4dailytasks.css" rel="stylesheet">
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  Testing
+<div class="jumbotron text-center">
+    <h1>AAAI Workshop on Artificial Intelligence for User-Centric Assistance in Daily Lives [Proposed] </h1>
+    <p>February 2023, Washington DC</p>
+    <p>Exact Date & Time TBD</p>
+</div>
+
+<div class="container text-justify">
+    <div class="row my-4">
+
+        <div class="col-lg-8 mx-auto">
+            <h3>Abstract</h3>
+            <p>
+                Our workshop aims to bring together researchers from different facets of Artificial Intelligence, from Human-Computer Interaction, Machine Learning, to Embodied Intelligence and explore problems related to how AI technologies can be used to assist and empower users in their daily lives through a user-centric and problem driven manner.
+            </p>
+            <h3>Description</h3>
+            <p>
+                With the large advancement in AI and ML, there is a lot of excitement for the potential for these technologies to enhance and improve our daily lives. However, these solutions are often basic research and their usability is limited by the scale and nuance in applying the technology in daily life problems. The deployment of these systems for daily life problems require not only various expertise across AI such as ML and NLP, but also experts in the problem and domain space. For instance, a simple medication tracker app can be supercharged with advancement in various fields of AI to improve its usability and effectiveness. Besides simply checking medication intake, it can learn the pattern of intake, deploy various natural language strategies to encourage and remind user taking, and engage others in their care network to help and remind intake. This capability is only possible through the integration and synergistic collaboration between areas.
+            </p>
+            <p>
+                Our workshop will attempt to bring together interested AI experts in different fields and share their experience and progress in using AI technologies to solve user’s daily problems. Through the workshop, we hope to not only connect and learn from experts in different fields but also share potential pitfalls when building these systems for budding researchers.
+            </p>
+            <p>
+                The workshop will consist of various keynotes from renowned experts in their pursuit of applying AI technologies to challenging problems, and lightning talks from contributing participants in this subfield. We will also have emph amount of discussion time to allow participants to connect and build collaborations. We also intend to have a session for question driven solutions.
+            </p>
+        </div>
+    </div>
+    <div class="row text-justify">
+        <div class="col-lg-8 mx-auto">
+            <h2>Call for Papers</h2>
+            <p>
+                Our workshop will focus on addressing challenges in deploying AI solutions in one’s daily lives. In this domain, the user is likely to be a non-expert and can come from a variety of backgrounds such as children or people with medical conditions. These solutions can also be community driven and we welcome work that explores connecting and maintaining one’s social network. Our workshop invites contributions from topics including but not limited to:
+                <ul>
+                    <li>Natural Language Processing for Daily Tasks</li>
+                    <li>AI solutions for Accessibility</li>
+                    <li>Longitudinal</li>
+                    <li>Social and Physical Assistance by Embodied Intelligence</li>
+                    <li>Assistance through Smart Home Technologies</li>
+                    <li>Explainable AI (XAI) for Non-Expert Users</li>
+                    <li>Semantic knowledge in Assistive Tasks</li>
+                    <li>Continual Learning for Household Tasks</li>
+                    <li>Dataset Acquisition</li>
+                    <li>Privacy, and Ethics around AI for Household Tasks</li>
+                    <li>Societal Impact of AI for Household Tasks</li>
+                    <li>Trustworthy AI and calibrating trust for household tasks</li>
+                </ul>
+            </p>
+            <h4>Submission Deadline</h4>
+            <p>TBD</p>
+        </div>
+    </div>
+    <div class="row text-justify">
+        <div class="col-lg-8 mx-auto">
+            <h2>Call for Participation</h2>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col">
+            <h2>Organizers</h2>
+        </div>
+    </div>
+    <div class="row text-center us">
+        <div class="col-sm-6 col-md-4 col-xl-3">
+            <a target="_blank" href="https://zhi.fyi/">
+                <img src="https://zhi.fyi/assets/img/me.jpg" class="img-fluid"/>
+                <h3>Xiang Zhi Tan</h3>
+                <p>Postdoctoral Fellow, Georgia Tech</p>
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 col-xl-3">
+            <a target="_blank" href="https://faculty.cc.gatech.edu/~chernova/">
+                <img src="https://www.scl.gatech.edu/sites/default/files/emp-profiles/schernova_2702.jpg" class="img-fluid" />
+                <h3>Sonia Chernova</h3>
+                <p>Associate Professor, Georgia Tech</p>
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 col-xl-3">
+            <a target="_blank" href="https://www.cs.cmu.edu/~./jeanoh/">
+                <img src="https://www.cs.cmu.edu/~./jeanoh/img/jeanoh16.jpg" class="img-fluid" />
+                <div class="my-auto"></div>
+                <h3>Jean Oh</h3>
+                <p>Associate Research Professor, CMU</p>
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 col-xl-3 mt-auto">
+            <a target="_blank" href="">
+                <img src="" class="img-fluid" />
+                <h3>Russell Perkins</h3>
+                <p>PhD Student, UMass Lowell</p>
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 col-xl-3">
+            <a target="_blank" href="https://www.uml.edu/profile/Paul_Robinette">
+                <img src="https://www.uml.edu/Images/Robinette-Paul_tcm18-330405.jpg?w=x" class="img-fluid" />
+                <h3>Paul Robinette</h3>
+                <p>Assistant Professor, UMass Lowell</p>
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 col-xl-3">
+            <a target="_blank" href="https://pschaldenbrand.github.io/">
+                <img src="https://github.com/pschaldenbrand/pschaldenbrand.github.io/blob/master/images/pete.jpg?raw=true" class="img-fluid" />
+                <h3>Peter Schaldenbrand</h3>
+                <p>PhD Student, CMU</p>
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 col-xl-3">
+            <a target="_blank" href="http://tanmayshankar.weebly.com/">
+                <img src="https://www.ri.cmu.edu/app/uploads/2016/12/shankar_tanmay_2016.jpg" class="img-fluid" />
+                <h3>Tanmay Shankar</h3>
+                <p>PhD Student, CMU</p>
+            </a>
+        </div>
+        <div class="col-sm-6 col-md-4 col-xl-3">
+            <a target="_blank" href="https://faculty.cc.gatech.edu/~dyang888/">
+                <img src="https://faculty.cc.gatech.edu/~dyang888/img/Diyi_Yang.jpg" class="img-fluid" />
+                <h3>Diyi Yang</h3>
+                <p>Assistant Professor, Georgia Tech</p>
+            </a>
+        </div>
+    </div>
+</div>
 </body>
