add temporary name

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <div class="jumbotron text-center">
-    <h1>AAAI Workshop on Artificial Intelligence for User-Centric Assistance in Daily Lives [Proposed] </h1>
+    <h1>AAAI Workshop on Artificial Intelligence for User-Centric Assistance for at Home Tasks [Proposed] </h1>
     <p>February 2023, Washington DC</p>
     <p>Exact Date & Time TBD</p>
 </div>
