--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <div class="col-lg-8 mx-auto">
             <h3>Abstract</h3>
             <p>
-                Our workshop aims to bring together researchers from different facets of Artificial Intelligence, from Human-Computer Interaction, Machine Learning, to Embodied Intelligence and explore problems related to how AI technologies can be used to assist and empower users in their daily lives through a user-centric and problem driven manner.
+                Our workshop aims to bring together researchers from different facets of Artificial Intelligence, from Human-Computer Interaction, Machine Learning, to Natural Language Processing and explore problems related to how AI technologies can be used to assist and empower users with at-home tasks through a user-centric and problem driven manner.
             </p>
             <h3>Description</h3>
             <p>
-                With the large advancement in AI and ML, there is a lot of excitement for the potential for these technologies to enhance and improve our daily lives. However, these solutions are often basic research and their usability is limited by the scale and nuance in applying the technology in daily life problems. The deployment of these systems for daily life problems require not only various expertise across AI such as ML and NLP, but also experts in the problem and domain space. For instance, a simple medication tracker app can be supercharged with advancement in various fields of AI to improve its usability and effectiveness. Besides simply checking medication intake, it can learn the pattern of intake, deploy various natural language strategies to encourage and remind user taking, and engage others in their care network to help and remind intake. This capability is only possible through the integration and synergistic collaboration between areas.
+                With the advancement in AI and ML, there is a lot of excitement for the potential of these technologies to enhance and improve our daily lives. However, these solutions are often based on simplified formulation and abstracted datasets that make them challenging to be applied in complex and personalized household domains. Furthermore, any household solution will require not only expertise across algorithmic AI but also experts in interaction, socio technical issues, and problem space. For instance, a simple medication tracker app can be supercharged with advancement in various fields of AI to improve its usability and effectiveness. Besides simply checking medication intake, it can learn the pattern of intake, deploy various natural language strategies to encourage and remind user taking, and engage others in their care network to help and remind intake. This capability is only possible through the integration and synergistic collaboration between areas.
             </p>
             <p>
-                Our workshop will attempt to bring together interested AI experts in different fields and share their experience and progress in using AI technologies to solve user’s daily problems. Through the workshop, we hope to not only connect and learn from experts in different fields but also share potential pitfalls when building these systems for budding researchers.
+                Since the topic of this workshop touches on so many different fields, its research community is spread out across different conferences. Our workshop is designed  to bring together interested AI experts that, while coming from different subfields, share the vision of using AI technologies to solve user problems at home. Participants of the workshop will have the opportunity to share their experience and progress in using AI technologies to assist and empower users at home as well as learn and engage with our expert speakers/panelists.
             </p>
             <p>
-                The workshop will consist of various keynotes from renowned experts in their pursuit of applying AI technologies to challenging problems, and lightning talks from contributing participants in this subfield. We will also have emph amount of discussion time to allow participants to connect and build collaborations. We also intend to have a session for question driven solutions.
+                We are planning a full-day hybrid workshop with a mix of keynote talks, contribution talks, and focused discussions. Our workshop will have a narrative where the morning portion of the program will discuss and talk about challenges at home and the vision of AI solutions. This will be followed by the afternoon session where we bring in various AI experts to discuss algorithmic approaches to various household problems and spark discussion on connecting AI technologies with real problems. We plan to end the workshop with a breakout session to discuss the pressing repeated questions that surfaced during the workshop.
             </p>
         </div>
     </div>
@@ -47,15 +47,14 @@
         <div class="col-lg-8 mx-auto">
             <h2>Call for Papers</h2>
             <p>
-                Our workshop will focus on addressing challenges in deploying AI solutions in one’s daily lives. In this domain, the user is likely to be a non-expert and can come from a variety of backgrounds such as children or people with medical conditions. These solutions can also be community driven and we welcome work that explores connecting and maintaining one’s social network. Our workshop invites contributions from topics including but not limited to:
+                In addition to the invited speakers, we also intend to solicit contributions where authors can present their work through lightning talks and poster sessions. We are soliciting contributions from topics including but not limited to:
                 <ul>
-                    <li>Natural Language Processing for Daily Tasks</li>
+                    <li>Natural Language Processing for Household Tasks</li>
                     <li>AI solutions for Accessibility</li>
-                    <li>Longitudinal</li>
-                    <li>Social and Physical Assistance by Embodied Intelligence</li>
+                    <li>Social and Physical Assistance by Embodied Intelligence at Home</li>
                     <li>Assistance through Smart Home Technologies</li>
                     <li>Explainable AI (XAI) for Non-Expert Users</li>
-                    <li>Semantic knowledge in Assistive Tasks</li>
+                    <li>Semantic knowledge in Household Tasks</li>
                     <li>Continual Learning for Household Tasks</li>
                     <li>Dataset Acquisition</li>
                     <li>Privacy, and Ethics around AI for Household Tasks</li>
