added russ photo

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-xl-3 mt-auto">
             <a target="_blank" href="">
-                <img src="" class="img-fluid" />
+                <img src="res/russ.jpg" class="img-fluid" />
                 <h3>Russell Perkins</h3>
                 <p>PhD Student, UMass Lowell</p>
             </a>
