--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8">
-    <title>AI4DailyTasks</title>
+    <title>AI4HomeTasks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="favicon.png">
